src/test/ui/const-eval/conditional_array_execution.nll.stderr
warning: attempt to subtract with overflow
  --> $DIR/conditional_array_execution.rs:15:19
   |
LL | const FOO: u32 = [X - Y, Y - X][(X < Y) as usize];
   |                   ^^^^^
   |
note: lint level defined here
  --> $DIR/conditional_array_execution.rs:11:9
   |
LL | #![warn(const_err)]
   |         ^^^^^^^^^

warning: this constant cannot be used
  --> $DIR/conditional_array_execution.rs:15:1
   |
LL | const FOO: u32 = [X - Y, Y - X][(X < Y) as usize];
   | ^^^^^^^^^^^^^^^^^^-----^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                   |
   |                   attempt to subtract with overflow

warning: referenced constant
  --> $DIR/conditional_array_execution.rs:20:20
   |
LL | const FOO: u32 = [X - Y, Y - X][(X < Y) as usize];
   |                   ----- attempt to subtract with overflow
...
LL |     println!("{}", FOO);
   |                    ^^^

warning: this expression will panic at runtime
  --> $DIR/conditional_array_execution.rs:20:20
   |
LL |     println!("{}", FOO);
   |                    ^^^ referenced constant has errors

error[E0080]: referenced constant
  --> $DIR/conditional_array_execution.rs:20:5
   |
LL | const FOO: u32 = [X - Y, Y - X][(X < Y) as usize];
   |                   ----- attempt to subtract with overflow
...
LL |     println!("{}", FOO);
   |     ^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0080]: erroneous constant used
  --> $DIR/conditional_array_execution.rs:20:5
   |
LL |     println!("{}", FOO);
   |     ^^^^^^^^^^^^^^^---^^
   |                    |
   |                    referenced constant has errors
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0080]: referenced constant
  --> $DIR/conditional_array_execution.rs:20:20
   |
LL | const FOO: u32 = [X - Y, Y - X][(X < Y) as usize];
   |                   ----- attempt to subtract with overflow
...
LL |     println!("{}", FOO);
   |                    ^^^

error[E0080]: erroneous constant used
  --> $DIR/conditional_array_execution.rs:20:20
   |
LL |     println!("{}", FOO);
   |                    ^^^ referenced constant has errors

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0080`.
